# lilygo_s3_apps

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/mic_reader/: CMakeLists.txt  def.h  i2s_rx_slot.cpp  i2s_rx_slot.h  mic_proc.h
components/nn_model/: CMakeLists.txt  idf_component.yml  nn_model.cpp  nn_model.h  tensor_arena.h  tflite_op_resolver.h
components/nn_model/audio_preprocessor/: audio_preprocessor.cpp  audio_preprocessor.h
hooks/: pre-commit.sh
main/: CMakeLists.txt  Kconfig.projbuild  git_version.h  idf_component.yml  main.cpp
main/App/: App.cpp  Event.cpp  Status.cpp  Touch.cpp
main/App/include/: App.hpp  Event.hpp  IDisplay.hpp  ILed.hpp  State.hpp  Status.hpp  Touch.hpp
main/Hardware/: DisplaySTDOUT.hpp  Lcd_GC9D01N.cpp  Lcd_GC9D01N.hpp  Led_APA102.cpp  Led_APA102.hpp
main/VoiceMsgPlayer/: I2sTx.cpp  I2sTx.hpp  Types.hpp  VoiceMsgPlayer.cpp  VoiceMsgPlayer.hpp  WavPlayer.cpp  WavPlayer.hpp  ref_numbers_samples.cpp  ref_objects_samples.cpp  voice_msg_samples.cpp
main/eng_teacher/: ObjectsRecognition.cpp  ObjectsRecognition.h  bitmaps.cpp  bitmaps.h  numbers_model.cpp  objects_model.cpp
main/kws/: VoiceRelay.cpp  kws_event_task.cpp  kws_event_task.h  kws_model.cpp  kws_task.cpp  kws_task.h
main/sed/: SED.cpp  sed_model_baby_cry.cpp  sed_model_bark.cpp  sed_model_coughing.cpp  sed_model_glass_breaking.cpp  sed_task.cpp  sed_task.h
main/voice_relay/: VoiceRelay.cpp
